# videoagent

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
eval/: __init__.py  cases.py  runner.py
pipeline/: go.mod
pipeline/cmd/pipelined/: main.go
pipeline/internal/ffmpeg/: ffmpeg.go  ffmpeg_test.go
pipeline/internal/queue/: queue.go  queue_test.go
pipeline/internal/upload/: upload.go  upload_test.go
tests/: test_api.py  test_eval.py  test_eval_suite.py  test_ffmpeg_run.py  test_ops.py  test_planner.py  test_stream.py  test_v4_batch.py  test_verifier.py
videoagent/: __init__.py  api.py  batch.py  eval.py  ffmpeg_run.py  openai_client.py  ops.py  planner.py  verifier.py
web/: app.js  index.html  style.css
